--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -238,6 +238,7 @@
                                             </div>
                                         </div>
                                     </label>
+                                    <div class="error_text">Вы должны принять условия пользовательского соглашения</div>
                                 </div>
                             </div>
                             <!-- -->
