--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -58,7 +58,7 @@
                                     <input type="text" name="vinCode" id="vinCode" value="{{ app.session.get('vinCode')}}"/>
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                             </div>
                             <div class="line">
@@ -67,7 +67,7 @@
                                     <input type="text" name="carNumber" id="carNumber" value="{{ app.session.get('carNumber')}}"/>
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">В номерном знаке должно <br>быть минимум 7 символов!</div>
+                                    <div class="error_text_box">В номерном знаке должно быть минимум 7 символов!</div>
                                 </div>
                             </div>
                         </div>
@@ -106,19 +106,19 @@
                                     <input type="text" name="surname" id="surname" placeholder="Фамилия" value="{{ app.session.get('surname')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div class="control_point size2">
                                     <input type="text" name="firstname" id="firstname" placeholder="Имя" value="{{ app.session.get('firstname')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div class="control_point size2">
                                     <input type="text" name="middlename" id="middlename" placeholder="Отчество" value="{{ app.session.get('middlename')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div style="clear: both;"></div>
                             </div>
@@ -138,25 +138,25 @@
                                     <input type="text" name="documentSerie" id="documentSerie" placeholder="Серия" value="{{ app.session.get('documentSerie')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Это поле не может быть пустым</div>
                                 </div>
                                 <div class="control_point size1">
                                     <input type="text" name="documentNumber" id="documentNumber" placeholder="Номер" value="{{ app.session.get('documentNumber')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div class="control_point size4">
                                     <input type="text" name="documentAuthority" id="documentAuthority" placeholder="Кем выдан" value="{{ app.session.get('documentAuthority')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div class="control_point size1">
                                     <input type="text" name="documentDate" id="documentDate" placeholder="Когда" value="{{ app.session.get('documentDate')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div style="clear: both;"></div>
                             </div>
@@ -167,7 +167,7 @@
                                     <input type="text" placeholder="38(...)... .. .." name="phone" id="phone" value="{{ app.session.get('phone')}}" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div style="clear: both;"></div>
                             </div>
@@ -216,13 +216,13 @@
                                     <input type="text" name="registerAddress" id="registerAddress" placeholder="Улица" value="{{ app.session.get('registerAddress')}}"/>
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                                 <div class="control_point size2">
                                     <input type="text" name="registerBuilding" id="registerBuilding" value="{{ app.session.get('registerBuilding')}}" placeholder="Дом, корпус, квартира" />
                                     <div class="success ico"></div>
                                     <div class="error ico"></div>
-                                    <div class="error_text">Текст ошибки</div>
+                                    <div class="error_text_box">Текст ошибки</div>
                                 </div>
                             </div>
                             <!-- -->
@@ -238,7 +238,7 @@
                                             </div>
                                         </div>
                                     </label>
-                                    <div class="error_text">Вы должны принять условия пользовательского соглашения</div>
+                                    <div class="error_text_box_quest">Вы должны принять условия пользовательского соглашения</div>
                                 </div>
                             </div>
                             <!-- -->
