--- a/path/src/Insurance/ContentBundle/Resources/public/css/style.scss
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/style.scss
@@ -559,7 +559,6 @@ footer{
                     text-transform: uppercase;
                     text-align: center;
                     line-height:50px;
-                    padding-left:15px;
                     position: relative;
                     cursor: pointer;
                     @include font (20px, #fff);
@@ -568,6 +567,15 @@ footer{
                     @include sprite (0px, -143px);
                         &:hover{
                             background-position:0 -196px;
+                        }
+                        span{
+                           width:26px;
+                           height:28px;
+                           display:inline-block;
+                           position: relative;
+                           top:7px;
+                           margin-right:6px;
+                           @include sprite (-112px, -464px); 
                         }
                 }
         }
@@ -770,7 +778,7 @@ footer{
 .econom_box{
     position: relative;
     height:96px;
-    padding:0 48px; 
+    padding:0 47px; 
     margin-bottom:30px;  
         .shadow{
             position:absolute;
@@ -1291,7 +1299,7 @@ form.modal_form{
                     .ico.error{
                         display:block;
                     }
-                    .error_text{
+                    .error_text, .error_text_box{
                         display:block;
                     }
             }
@@ -1979,6 +1987,27 @@ form.personal_data{
                             0 1px 1px rgba(0, 0, 0, 0.13) inset;
                 box-shadow: 0 4px 7px rgba(0, 0, 0, 0.51),
                             0 1px 1px rgba(0, 0, 0, 0.13) inset;
+            }
+            .error_text_box{
+                @include border-radius(3px);
+                padding:0 4px;
+                font-family: Arial, Helvetica, sans-serif; 
+                @include font (11px, #fff);
+                position:absolute;
+                top:43px;
+                right:0;
+                background-color: #e73636;
+                z-index: 3;
+                display:none;
+                    &:before{
+                        content:"";
+                        border-bottom:8px solid #e73636;
+                        border-left:8px solid rgba(0, 0, 0, 0.0);
+                        border-right:8px solid rgba(0, 0, 0, 0.0);
+                        position: absolute;
+                        top:-8px;
+                        right:10px;
+                    }
             }
         }
         .combo.one_column ul li{
